suppress warning and bump fluava